# multiDice

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/multi_dice/: __init__.py  dice.py  dice_validation.py  test.py
tests/: basic_unit.py  test_pytest.py
