[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi_dice"
version = "0.0.6"
authors = [
  { name="BigBrainTime", email="" },
]
description = "A dice rolling package focused on flexibility"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BigBrainTime/multiDice"
Issues = "https://github.com/BigBrainTime/multiDice/issues"